fix: delete text wrap balance

--- a/src/app/@modal/(.)blogs/[slug]/components/blog-content/style.module.css
+++ b/src/app/@modal/(.)blogs/[slug]/components/blog-content/style.module.css
@@ -41,7 +41,6 @@
   color: var(--color-primary);
   margin: 24px 0 16px 0;
   line-height: 1.25;
-  text-wrap: balance;
 }
 
 .body :global(h2) {
@@ -52,7 +51,6 @@
   line-height: 1.25;
   padding-left: 8px;
   border-left: 4px solid var(--color-primary);
-  text-wrap: balance;
 }
 
 .body :global(h3) {
@@ -61,7 +59,6 @@
   color: var(--color-primary);
   margin: 16px 0 8px;
   line-height: 1.25;
-  text-wrap: balance;
 }
 
 .body :global(h4) {
@@ -69,7 +66,6 @@
   font-weight: bold;
   color: var(--color-primary);
   line-height: 1.25;
-  text-wrap: balance;
 }
 
 .body :global(p) {
